--- a/pom.xml
+++ b/pom.xml
@@ -150,14 +150,18 @@
 
 <distributionManagement>
     <repository>
-      <id>maven-releases</id>
-      <name>maven-releases</name>
-      <url>http://13.201.72.210:8081/repository/maven-releases/</url>
+             <server>
+                <id>maven-releases</id>
+                <name>maven-releases</name>
+                <url>http://13.201.72.210:8081/repository/maven-releases/</url>
+             </server>
     </repository>
     <snapshotRepository>
-      <id>maven-snapshots</id>
-      <name>maven-snapshots</name>
-      <url>http://13.201.72.210:8081/repository/maven-snapshots/</url>
+      <server>
+             <id>maven-snapshots</id>
+             <name>maven-snapshots</name>
+             <url>http://13.201.72.210:8081/repository/maven-snapshots/</url>
+      </server>
     </snapshotRepository>
 </distributionManagement>
 
