--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
     </build>
 
 <distributionManagement>
+         <repository>
+      <id>maven-releases</id>
+      <name>maven-releases</name>
+      <url>http://35.154.210.16:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
     <snapshotRepository>
              <id>maven-snapshots</id>
              <name>maven-snapshots</name>
