--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
     <snapshotRepository>
              <id>maven-snapshots</id>
              <name>maven-snapshots</name>
-             <url>http://35.154.210.16:8081/repository/maven-snapshots/</url>
+             <url>http://35.154.210.16:8081/#browse/browse:maven-snapshots</url>
     </snapshotRepository>
 </distributionManagement>
 
