--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+apiVersion: v1
+kind: ServiceAccount # Kubernetes resource kind we are creating
 metadata:
   name: ekart-deployment
   namespace: webapps
