--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ServiceAccount # Kubernetes resource kind we are creating
+apiVersion: webapps/v1
+kind: Service # Kubernetes resource kind we are creating
 metadata:
   name: ekart-deployment
   namespace: webapps
